--- a/package.json
+++ b/package.json
@@ -2,14 +2,29 @@
   "name": "todoist-weekly-review",
   "version": "0.0.1",
   "description": "A GTD Weekly Review list for Todoist",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Chris Mears",
   "license": "MIT",
   "dependencies": {
+    "cookie-session": "^2.0.0-beta.3",
+    "date-fns": "^1.29.0",
+    "dotenv": "^6.0.0",
     "ejs": "^2.6.1",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.2.14",
+    "passport": "^0.4.0",
+    "passport-oauth2": "^1.4.0",
+    "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "ejs-lint": "^0.3.0",
+    "eslint": "^5.6.0",
+    "nodemon": "^1.18.4"
   }
 }
