--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.2.14",
     "passport": "^0.4.0",
     "passport-oauth2": "^1.4.0",
+    "raven": "^2.6.4",
     "request": "^2.88.0"
   },
   "devDependencies": {
