--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Chris Mears",
+  "author": "Chris J Mears",
   "license": "MIT",
   "dependencies": {
     "cookie-session": "^2.0.0-beta.3",
